--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -50,6 +50,11 @@
     background-color: #F9FFFF;
 }
 
+input.ng-invalid.ng-dirty{
+    border: 1px solid #337ab7;
+    box-shadow: 0 0 1px #337ab7;
+}
+
 .has-success .form-control{
     color: #337ab7;
     border-color: #337ab7;
@@ -114,10 +119,6 @@
     font-size: 12px;
 }
 
-.modal-backdrop{
-    background-color: #E6EBE9
-}
-
 .card{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -132,6 +133,10 @@
     border-color: white;
     font-family: 'Roboto', sans-serif;
     color: #EBF2F7;
+}
+
+p{
+    color: #333;
 }
 
 pre{
