--- a/app/views/calculoipi_view.html
+++ b/app/views/calculoipi_view.html
@@ -2,33 +2,33 @@
     <div class="alt-titulo-view-container">
         <p class="alt-titulo-view">IPI</p>
     </div>
-    <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+    <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 alt-espacamento-top">
         <div class="row vertical-center-row">
             <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#ipiProprioModal">IPI Próprio</button>
             <br>
-            <button type="button" class="btn btn-main-sub btn-lg btn-block" ng-click="controlipi.voltar()">Voltar</button>
+            <button type="button" class="btn btn btn-default btn-lg btn-block" ng-click="controlipi.voltar()">Voltar</button>
         </div>
     </div>
 
     <!-- IPI Próprio Modal Início -->
             <div class="container">
                 <div id="ipiProprioModal" class="modal fade" role="dialog" tabindex="-1">
-                    <div class="modal-dialog">
-                        <div class="modal-content col-sm-8 col-sm-offset-2 col-xs-12">
-                            <div class="modal-header">
+                    <div class="modal-dialog modal-pequeno">
+                        <div class="modal-content">
+                            <div class="modal-header alt-cor-principal">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 <h4 class="modal-title">IPI Próprio</h4>
                             </div>
-                            <div class="modal-body">
+                            <div class="modal-body alt-overflow-hidden">
                                 <form name="ipiProprioForm">
-                                    <div class="col-md-6 col-xs-12">
+                                    <div class="col-sm-6 col-xs-12">
                                         <div class="form-group" ng-class="{'has-error': !controlipi.valoresipiProprio.validacaoBase(), 'has-success': controlipi.valoresipiProprio.validacaoBase()}">
-                                            <label class="help-block" for="lbBaseIpiProprio">Base Calculo</label>
+                                            <label class="help-block" for="lbBaseIpiProprio">Base Cálculo</label>
                                             <input type="number" ng-model="controlipi.valoresipiProprio.base" class="form-control" required />         
                                             <span class="help-block msg" ng-show="!controlipi.valoresipiProprio.validacaoBase()">Valor inválido!</span>
                                         </div>
                                     </div>
-                                    <div class="col-md-6 col-xs-12">
+                                    <div class="col-sm-6 col-xs-12">
                                         <div class="form-group" ng-class="{'has-error': !controlipi.valoresipiProprio.validacaoAliquotaNaoAceitaZero(), 'has-success': controlipi.valoresipiProprio.validacaoAliquotaNaoAceitaZero()}">    
                                             <label class="help-block" for="lbAliquotaIpiProprio">Alíquota IPI</label>
                                             <div class="input-group">
@@ -64,11 +64,9 @@
                                     </div>
                                 </form>
                             </div>
-                            <div class="col-xs-12 col-xs-offset-0">
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-main-sub" ng-click="controlipi.limparIpiProprio()">Limpar</button>
-                                    <button type="button" class="btn btn-main-sub" data-dismiss="modal">Fechar</button>
-                                </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" ng-click="controlipi.limparIpiProprio()">Limpar</button>
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
                             </div>
                         </div>
                     </div>
