--- a/app/views/home_view.html
+++ b/app/views/home_view.html
@@ -3,7 +3,7 @@
     <div class="alt-titulo-view-container">
         <p class="alt-titulo-view">Home</p>
     </div>
-    <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+    <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 alt-espacamento-top">
         <div class="row vertical-center-row">
             <button type="button" class="btn btn-primary btn-lg btn-block" type="button" ng-click="controladorhome.calculoICMS()">ICMS</button>
             <button type="button" class="btn btn-primary btn-lg btn-block" type="button" ng-click="controladorhome.calculoST()">ST</button>
