--- a/app/views/stnormal_view.html
+++ b/app/views/stnormal_view.html
@@ -2,27 +2,27 @@
     <div class="alt-titulo-view-container">
         <p class="alt-titulo-view">ST</p>
     </div>
-    <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+    <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 alt-espacamento-top">
         <div class="row vertical-center-row">
             <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#STProprioModal">ST Próprio</button>
             <br>
-            <button type="button" class="btn btn-main-sub btn-lg btn-block" ng-click="controlst.voltar()">Voltar</button>
+            <button type="button" class="btn btn btn-default btn-lg btn-block" ng-click="controlst.voltar()">Voltar</button>
         </div>
     </div>
     <!-- ST Modal Início -->
         <div class="container">
             <div id="STProprioModal" class="modal fade" role="dialog" tabindex="-1">
-                <div class="modal-dialog">
-                    <div class="modal-content col-sm-10 col-sm-offset-1 col-xs-12">
-                        <div class="modal-header">
+                <div class="modal-dialog modal-grande">
+                    <div class="modal-content">
+                        <div class="modal-header alt-cor-principal">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                             <h4 class="modal-title">ST Próprio</h4>   
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body alt-overflow-hidden">
                             <form name="StProprioForm">
                                 <div class="col-sm-6 col-xs-12">                               
                                     <div class="form-group" ng-class="{'has-error': !controlst.valoresStProprio.validacaoBase(), 'has-success': controlst.valoresStProprio.validacaoBase()}">
-                                        <label class="help-block" for="lbBaseStProprio">Base Cálculo</label>
+                                        <label class="help-block" for="lbBaseStProprio">Base Cálculo <font size="1">sem IPI</font></label>
                                         <input type="number" ng-model="controlst.valoresStProprio.base" class="form-control">
                                         <span class="help-block msg" ng-show="!controlst.valoresStProprio.validacaoBase()">Valor inválido!</span>     
                                     </div>
@@ -97,11 +97,9 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-xs-12 col-xs-offset-0">
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-main-sub" ng-click="controlst.limparSt()">Limpar</button>
-                                <button type="button" class="btn btn-main-sub" data-dismiss="modal">Fechar</button>
-                            </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" ng-click="controlst.limparSt()">Limpar</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
                         </div>
                     </div>
                 </div>
