--- a/app/views/home_view.html
+++ b/app/views/home_view.html
@@ -5,9 +5,9 @@
     </div>
     <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 alt-espacamento-top">
         <div class="row vertical-center-row">
-            <button type="button" class="btn btn-primary btn-lg btn-block" type="button" ng-click="controladorhome.calculoICMS()">ICMS</button>
-            <button type="button" class="btn btn-primary btn-lg btn-block" type="button" ng-click="controladorhome.calculoST()">ST</button>
-            <button type="button" class="btn btn-primary btn-lg btn-block" type="button" ng-click="controladorhome.calculoIPI()">IPI</button>
+            <button type="button" id="botaoIcms" class="btn btn-primary btn-lg btn-block" type="button" ng-click="controladorhome.calculoICMS()">ICMS</button>
+            <button type="button" id="botaoSt"class="btn btn-primary btn-lg btn-block" type="button" ng-click="controladorhome.calculoST()">ST</button>
+            <button type="button" id="botaoIpi" class="btn btn-primary btn-lg btn-block" type="button" ng-click="controladorhome.calculoIPI()">IPI</button>
         </div>
     </div>
 </body>
