Implementação Primeiros Testes Protractor

--- a/app/views/home_view.html
+++ b/app/views/home_view.html
@@ -1,7 +1,7 @@
 <html>
 <body class="ng-scope">
     <div class="alt-titulo-view-container">
-        <p class="alt-titulo-view">Home</p>
+        <p id="tituloHome" class="alt-titulo-view">Home</p>
     </div>
     <div class="container container-table col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 alt-espacamento-top">
         <div class="row vertical-center-row">
